# tensor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: consts.py  main.py  page.py
src/pages/: loacators.py  page.py
