[tool.poetry]
name = "tensor"
version = "0.1.0"
description = "tensor test task"
authors = ["gev"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
pytest = "^7.4.3"

[tool.poetry.scripts]
run_main = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
